// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidebarMenuLink handles active state 1`] = `

<gui-collapsible
  aschild="true"
  classname="group/collapsible hover:bg-transparent"
>
  <gui-sidebar-menu-item>
    <gui-collapsible-trigger aschild="true">
      <gui-sidebar-menu-button
        aschild="true"
        tooltip="Settings"
        isactive="false"
        classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
      >
        <button
          to
          class="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
        >
          <span style="z-index: 1;">
            Settings
          </span>
          <gui-chevron-right-icon
            style="z-index: 1;"
            classname="ml-auto transition-transform duration-200 group-data-[state=open]/collapsible:rotate-90"
          >
          </gui-chevron-right-icon>
        </button>
      </gui-sidebar-menu-button>
    </gui-collapsible-trigger>
    <gui-collapsible-content>
      <gui-sidebar-menu-sub>
        <div style="opacity: 0;">
          <div style="opacity: 0; transform: translateY(-1px);">
            <gui-collapsible
              aschild="true"
              classname="group/collapsible hover:bg-transparent"
            >
              <gui-sidebar-menu-sub-item>
                <gui-collapsible-trigger aschild="true">
                  <gui-sidebar-menu-sub-button
                    aschild="true"
                    isactive="true"
                    classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
                  >
                    <gui-nav-link
                      to="/settings/profile"
                      classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                    >
                      <span style="z-index: 2;">
                        Profile
                      </span>
                    </gui-nav-link>
                  </gui-sidebar-menu-sub-button>
                </gui-collapsible-trigger>
              </gui-sidebar-menu-sub-item>
            </gui-collapsible>
          </div>
          <div style="opacity: 0; transform: translateY(-1px);">
            <gui-collapsible
              aschild="true"
              classname="group/collapsible hover:bg-transparent"
            >
              <gui-sidebar-menu-sub-item>
                <gui-collapsible-trigger aschild="true">
                  <gui-sidebar-menu-sub-button
                    aschild="true"
                    isactive="false"
                    classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
                  >
                    <gui-nav-link
                      to="/settings/security"
                      classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                    >
                      <span style="z-index: 2;">
                        Security
                      </span>
                    </gui-nav-link>
                  </gui-sidebar-menu-sub-button>
                </gui-collapsible-trigger>
              </gui-sidebar-menu-sub-item>
            </gui-collapsible>
          </div>
        </div>
      </gui-sidebar-menu-sub>
    </gui-collapsible-content>
  </gui-sidebar-menu-item>
</gui-collapsible>

`;

exports[`SidebarMenuLink handles collapsible menu items 1`] = `

<gui-collapsible
  aschild="true"
  classname="group/collapsible hover:bg-transparent"
>
  <gui-sidebar-menu-item>
    <gui-collapsible-trigger aschild="true">
      <gui-sidebar-menu-button
        aschild="true"
        tooltip="Settings"
        isactive="false"
        classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
      >
        <button
          to
          class="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
        >
          <span style="z-index: 1;">
            Settings
          </span>
          <gui-chevron-right-icon
            style="z-index: 1;"
            classname="ml-auto transition-transform duration-200 group-data-[state=open]/collapsible:rotate-90"
          >
          </gui-chevron-right-icon>
        </button>
      </gui-sidebar-menu-button>
    </gui-collapsible-trigger>
    <gui-collapsible-content>
      <gui-sidebar-menu-sub>
        <div style="opacity: 0;">
          <div style="opacity: 0; transform: translateY(-1px);">
            <gui-collapsible
              aschild="true"
              classname="group/collapsible hover:bg-transparent"
            >
              <gui-sidebar-menu-sub-item>
                <gui-collapsible-trigger aschild="true">
                  <gui-sidebar-menu-sub-button
                    aschild="true"
                    isactive="false"
                    classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
                  >
                    <gui-nav-link
                      to="/settings/profile"
                      classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                    >
                      <span style="z-index: 2;">
                        Profile
                      </span>
                    </gui-nav-link>
                  </gui-sidebar-menu-sub-button>
                </gui-collapsible-trigger>
              </gui-sidebar-menu-sub-item>
            </gui-collapsible>
          </div>
          <div style="opacity: 0; transform: translateY(-1px);">
            <gui-collapsible
              aschild="true"
              classname="group/collapsible hover:bg-transparent"
            >
              <gui-sidebar-menu-sub-item>
                <gui-collapsible-trigger aschild="true">
                  <gui-sidebar-menu-sub-button
                    aschild="true"
                    isactive="false"
                    classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
                  >
                    <gui-nav-link
                      to="/settings/security"
                      classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                    >
                      <span style="z-index: 2;">
                        Security
                      </span>
                    </gui-nav-link>
                  </gui-sidebar-menu-sub-button>
                </gui-collapsible-trigger>
              </gui-sidebar-menu-sub-item>
            </gui-collapsible>
          </div>
        </div>
      </gui-sidebar-menu-sub>
    </gui-collapsible-content>
  </gui-sidebar-menu-item>
</gui-collapsible>

`;

exports[`SidebarMenuLink handles nested menu items 1`] = `

<gui-collapsible
  aschild="true"
  classname="group/collapsible hover:bg-transparent"
>
  <gui-sidebar-menu-item>
    <gui-collapsible-trigger aschild="true">
      <gui-sidebar-menu-button
        aschild="true"
        tooltip="Products"
        isactive="false"
        classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
      >
        <button
          to
          class="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
        >
          <span style="z-index: 1;">
            Products
          </span>
          <gui-chevron-right-icon
            style="z-index: 1;"
            classname="ml-auto transition-transform duration-200 group-data-[state=open]/collapsible:rotate-90"
          >
          </gui-chevron-right-icon>
        </button>
      </gui-sidebar-menu-button>
    </gui-collapsible-trigger>
    <gui-collapsible-content>
      <gui-sidebar-menu-sub>
        <div style="opacity: 0;">
          <div style="opacity: 0; transform: translateY(-1px);">
            <gui-collapsible
              aschild="true"
              classname="group/collapsible hover:bg-transparent"
            >
              <gui-sidebar-menu-sub-item>
                <gui-collapsible-trigger aschild="true">
                  <gui-sidebar-menu-sub-button
                    aschild="true"
                    isactive="false"
                    classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
                  >
                    <gui-nav-link
                      to="/products"
                      classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                    >
                      <span style="z-index: 2;">
                        Overview
                      </span>
                    </gui-nav-link>
                  </gui-sidebar-menu-sub-button>
                </gui-collapsible-trigger>
              </gui-sidebar-menu-sub-item>
            </gui-collapsible>
          </div>
          <div style="opacity: 0; transform: translateY(-1px);">
            <gui-collapsible
              aschild="true"
              classname="group/collapsible hover:bg-transparent"
            >
              <gui-sidebar-menu-sub-item>
                <gui-collapsible-trigger aschild="true">
                  <gui-sidebar-menu-sub-button
                    aschild="true"
                    isactive="false"
                    classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
                  >
                    <button
                      to
                      class="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                    >
                      <span style="z-index: 2;">
                        Categories
                      </span>
                      <gui-chevron-right-icon
                        style="z-index: 2;"
                        classname="ml-auto transition-transform duration-200 group-data-[state=open]/collapsible:rotate-90"
                      >
                      </gui-chevron-right-icon>
                    </button>
                  </gui-sidebar-menu-sub-button>
                </gui-collapsible-trigger>
                <gui-collapsible-content>
                  <gui-sidebar-menu-sub>
                    <div style="opacity: 0;">
                      <div style="opacity: 0; transform: translateY(-1px);">
                        <gui-collapsible
                          aschild="true"
                          classname="group/collapsible hover:bg-transparent"
                        >
                          <gui-sidebar-menu-sub-item>
                            <gui-collapsible-trigger aschild="true">
                              <gui-sidebar-menu-sub-button
                                aschild="true"
                                isactive="false"
                                classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
                              >
                                <gui-nav-link
                                  to="/products/electronics"
                                  classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                                >
                                  <span style="z-index: 3;">
                                    Electronics
                                  </span>
                                </gui-nav-link>
                              </gui-sidebar-menu-sub-button>
                            </gui-collapsible-trigger>
                          </gui-sidebar-menu-sub-item>
                        </gui-collapsible>
                      </div>
                      <div style="opacity: 0; transform: translateY(-1px);">
                        <gui-collapsible
                          aschild="true"
                          classname="group/collapsible hover:bg-transparent"
                        >
                          <gui-sidebar-menu-sub-item>
                            <gui-collapsible-trigger aschild="true">
                              <gui-sidebar-menu-sub-button
                                aschild="true"
                                isactive="false"
                                classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
                              >
                                <gui-nav-link
                                  to="/products/clothing"
                                  classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
                                >
                                  <span style="z-index: 3;">
                                    Clothing
                                  </span>
                                </gui-nav-link>
                              </gui-sidebar-menu-sub-button>
                            </gui-collapsible-trigger>
                          </gui-sidebar-menu-sub-item>
                        </gui-collapsible>
                      </div>
                    </div>
                  </gui-sidebar-menu-sub>
                </gui-collapsible-content>
              </gui-sidebar-menu-sub-item>
            </gui-collapsible>
          </div>
        </div>
      </gui-sidebar-menu-sub>
    </gui-collapsible-content>
  </gui-sidebar-menu-item>
</gui-collapsible>

`;

exports[`SidebarMenuLink renders basic menu item 1`] = `

<gui-collapsible
  aschild="true"
  classname="group/collapsible hover:bg-transparent"
>
  <gui-sidebar-menu-item>
    <gui-collapsible-trigger aschild="true">
      <gui-sidebar-menu-button
        aschild="true"
        tooltip="Home"
        isactive="true"
        classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
      >
        <gui-nav-link
          to="/"
          classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
        >
          <span style="z-index: 1;">
            Home
          </span>
        </gui-nav-link>
      </gui-sidebar-menu-button>
    </gui-collapsible-trigger>
  </gui-sidebar-menu-item>
</gui-collapsible>

`;

exports[`SidebarMenuLink renders external link 1`] = `

<gui-collapsible
  aschild="true"
  classname="group/collapsible hover:bg-transparent"
>
  <gui-sidebar-menu-item>
    <gui-collapsible-trigger aschild="true">
      <gui-sidebar-menu-button
        aschild="true"
        tooltip="Documentation"
        isactive="false"
        classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
      >
        <gui-nav-link
          to="https://docs.example.com"
          classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
        >
          <span style="z-index: 1;">
            Documentation
          </span>
          <gui-arrow-up-right-icon classname="duration-250 z-[3] ml-auto transition-all group-hover/sidebar-button:-translate-y-0.5 group-hover/sidebar-button:translate-x-0.5">
          </gui-arrow-up-right-icon>
        </gui-nav-link>
      </gui-sidebar-menu-button>
    </gui-collapsible-trigger>
  </gui-sidebar-menu-item>
</gui-collapsible>

`;

exports[`SidebarMenuLink renders menu item with badge 1`] = `

<gui-collapsible
  aschild="true"
  classname="group/collapsible hover:bg-transparent"
>
  <gui-sidebar-menu-item>
    <gui-collapsible-trigger aschild="true">
      <gui-sidebar-menu-button
        aschild="true"
        tooltip="Notifications"
        isactive="false"
        classname="whitespace-nowrap data-[active=true]:bg-neutral-200/75 data-[active=true]:text-foreground data-[active=true]:dark:bg-muted/60 data-[active=true]:dark:text-foreground"
      >
        <gui-nav-link
          to="/notifications"
          classname="duration-250 group/sidebar-button w-full cursor-default text-muted-foreground transition-all hover:bg-transparent data-[state=open]:hover:bg-transparent"
        >
          <span style="z-index: 1;">
            Notifications
          </span>
          <gui-sidebar-menu-badge>
            3
          </gui-sidebar-menu-badge>
        </gui-nav-link>
      </gui-sidebar-menu-button>
    </gui-collapsible-trigger>
  </gui-sidebar-menu-item>
</gui-collapsible>

`;
